# test_ndk

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/test_ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Calculator.cpp  Calculator.h  native-lib.cpp
app/src/main/java/com/example/test_ndk/: MainActivity.kt
app/src/main/java/com/example/test_ndk/db/: AppDatabase.kt  UserDao.kt
app/src/main/java/com/example/test_ndk/model/: User.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/test_ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
